--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "engines": {
-    "node": "^16.13.1"
+    "node": "^20.17.0"
   },
   "resolutions": {
     "@babel/core": "^7.16.0"
@@ -36,7 +36,7 @@
     "webdav": "^3.3.0"
   },
   "scripts": {
-    "start": "./bin/compile_search_parser.sh && react-scripts start",
+    "start": "./bin/compile_search_parser.sh && react-scripts --openssl-legacy-provider  start",
     "build": "./bin/compile_search_parser.sh && react-scripts build",
     "test:dbg": "./bin/compile_search_parser.sh && react-scripts --inspect-brk test --runInBand --no-cache",
     "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
