--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "eslint-nibble": "^6.1.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-redux": "^3.3.0",
+    "eslint-plugin-react-redux": "4.0.0",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.1",
