--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "1.0.1",
-    "sass": "1.44.0",
+    "sass": "1.45.0",
     "webdav": "^3.3.0"
   },
   "scripts": {
-    "start": "./bin/compile_search_parser.sh && react-scripts --openssl-legacy-provider  start",
-    "build": "./bin/compile_search_parser.sh && react-scripts build",
-    "test:dbg": "./bin/compile_search_parser.sh && react-scripts --inspect-brk test --runInBand --no-cache",
-    "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
-    "coverage": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom --coverage --watchAll=false",
+    "start": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts --openssl-legacy-provider start",
+    "compile-sass": "./bin/compile_sass.sh",
+    "build": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts --openssl-legacy-provider build",
+    "test:dbg": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts --inspect-brk test --runInBand --no-cache",
+    "test": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts test --env=jsdom",
+    "coverage": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts test --env=jsdom --coverage --watchAll=false",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
     "prettier": "./node_modules/.bin/prettier \"**/*.js\"",
