--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dropbox": "10.31.0",
     "immutable": "^3.8.2",
     "lodash": "^4.17.21",
+    "parcel": "^2.14.4",
     "pegjs": "^0.10.0",
     "react": "16.10.0",
     "react-beautiful-dnd": "^13.0.0",
@@ -28,7 +29,6 @@
     "react-motion": "^0.5.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "1.1.0",
@@ -36,18 +36,17 @@
     "webdav": "^3.3.0"
   },
   "scripts": {
-    "start": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts --openssl-legacy-provider start",
+    "start": "parcel",
     "compile-sass": "./bin/compile_sass.sh",
-    "build": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts --openssl-legacy-provider build",
+    "build": "parcel build",
     "test:dbg": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts --inspect-brk test --runInBand --no-cache",
-    "test": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts test --env=jsdom",
+    "test": "jest",
     "coverage": "./bin/compile_search_parser.sh && yarn run compile-sass && react-scripts test --env=jsdom --coverage --watchAll=false",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
     "prettier": "./node_modules/.bin/prettier \"**/*.js\"",
     "prettier-eslint": "./node_modules/.bin/prettier-eslint \"`pwd`/**/*.js\"",
-    "lint": "yarn eslint && yarn prettier-eslint --list-different",
-    "eject": "react-scripts eject",
+    "lint": "eslint src",
     "postinstall": "if [ \"$ON_HEROKU\" ]; then npm install -g serve; fi"
   },
   "devDependencies": {
@@ -56,16 +55,30 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "12.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "7.12.0",
+    "babel-jest": "^26.6.0",
+    "babel-preset-react-app": "^10.0.0",
+    "crypto-browserify": "^3.12.0",
+    "eslint": "^7.11.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-nibble": "^6.1.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-redux": "4.0.0",
+    "events": "^3.1.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
+    "path-browserify": "^1.0.0",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.1",
+    "process": "^0.11.10",
     "raw.macro": "0.4.2",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "stream-browserify": "^3.0.0",
+    "svgo": "^3",
+    "util": "^0.12.3",
+    "vm-browserify": "^1.1.2"
   },
   "jest": {
     "coverageReporters": [
@@ -77,5 +90,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "source": "public/index.html"
 }
