--- a/package.json
+++ b/package.json
@@ -33,15 +33,14 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "1.1.0",
-    "sass": "1.45.0",
     "webdav": "^3.3.0"
   },
   "scripts": {
-    "start": "./bin/compile_search_parser.sh && yarn run compile-sass && parcel",
-    "compile-sass": "./bin/compile_sass.sh",
-    "build": "./bin/compile_search_parser.sh && yarn run compile-sass && parcel build",
-    "test": "./bin/compile_search_parser.sh && yarn run compile-sass && jest --env=jsdom",
-    "coverage": "./bin/compile_search_parser.sh && yarn run compile-sass && jest --env=jsdom --coverage --watchAll=false",
+    "start": "./bin/compile_search_parser.sh && parcel --port 3000",
+    "compile-sass": "parcel build src/components/Landing/vendor_css/template.scss",
+    "build": "./bin/compile_search_parser.sh && parcel build",
+    "test": "./bin/compile_search_parser.sh && jest --env=jsdom",
+    "coverage": "./bin/compile_search_parser.sh && jest --env=jsdom --coverage --watchAll=false",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
     "prettier": "./node_modules/.bin/prettier \"**/*.js\"",
@@ -52,6 +51,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@parcel/transformer-sass": "^2.14.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "12.0.0",
     "babel-eslint": "^10.1.0",
