--- a/jest.config.json
+++ b/jest.config.json
@@ -26,7 +26,9 @@
   "moduleNameMapper": {
     "^react-native$": "react-native-web",
     "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
-    "^jsx:.+\\.svg": "<rootDir>/config/jest/SvgComponent.js"
+    "^jsx:.+\\.svg": "<rootDir>/config/jest/SvgComponent.js",
+    "^bundle-text:(.*)$": "<rootDir>/__mocks__/fileMock.js",
+    "^url:(.*)$": "<rootDir>/__mocks__/fileMock.js"
   },
   "moduleFileExtensions": [
     "web.js",
