--- a/jest.config.json
+++ b/jest.config.json
@@ -12,7 +12,7 @@
     "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
   ],
   "testEnvironment": "jsdom",
-  "testRunner": "/home/munen/src/200ok/organice/node_modules/jest-circus/runner.js",
+  "testRunner": "./node_modules/jest-circus/runner.js",
   "transform": {
     "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
     "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
