fix: Remove several warnings/errors for deploying via CI
     Original errors: https://circleci.com/api/v1.1/project/github/200ok-ch/organice/4918/output/104/0?file=true&allocation-id=6819d38cf8f85a5e36a1df1f-0-build%2FABCDEFGH

--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
     "@parcel/service-worker": "^2.14.4",
+    "@types/node-fetch": "^2.5.7",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
     "aos": "^2.3.4",
     "bowser": "^2.11.0",
+    "buffer": "^5.5.0||^6.0.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "dropbox": "10.31.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "immutable": "^3.8.2",
     "lodash": "^4.17.21",
     "parcel": "^2.14.4",
