refactor(docker): Consolidate and enhance Docker configuration
  This commit significantly refactors the Docker setup for organice to improve maintainability, developer experience, and production image optimization.

  Key changes include:
  - Unified multi-stage Dockerfile
  - Unified docker-compose.yml
  - Base Image Switch: Changed base images from Alpine to Debian Bookworm (`-slim` for production) for broader compatibility and a more familiar tooling environment, while still optimizing for a small production image.
  - Ability to develop from Docker.
  - Production Optimization: The production stage is carefully constructed to include only necessary built assets and runtime dependencies, ensuring a minimal image size.
  - Documentation: Updated `README.org` and `WIKI.org` to reflect the new Docker commands, setup, and best practices for both development and production.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,8 +107,8 @@ jobs:
     machine: true
     steps:
       - checkout
-      # Build docker image and push it to DockerHub
-      - run: docker build --rm=false -t ${DOCKER_HUB_USR}/organice:${CIRCLE_BUILD_NUM} .
+      # Build production docker image and push it to DockerHub
+      - run: docker build --rm=false --target production -t ${DOCKER_HUB_USR}/organice:${CIRCLE_BUILD_NUM} .
       - run: docker login --username ${DOCKER_HUB_USR} --password ${DOCKER_HUB_PWD}
       - run: docker push ${DOCKER_HUB_USR}/organice:${CIRCLE_BUILD_NUM}
       # Re-assign latest tag to current build
