feat: Implement org habits consistency graph

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "scripts": {
     "start": "./bin/compile_search_parser.sh && parcel --host 0.0.0.0 --port 3000",
+    "clean": "rm -rf .parcel-cache",
     "compile-sass": "parcel build src/components/Landing/vendor_css/template.scss",
     "build": "./bin/compile_search_parser.sh && parcel build",
     "test": "./bin/compile_search_parser.sh && jest --env=jsdom",
