chore: Upgrade Jest library

--- a/jest.config.json
+++ b/jest.config.json
@@ -6,12 +6,15 @@
     "src/**/*.{js,jsx,ts,tsx}",
     "!src/**/*.d.ts"
   ],
-  "setupFilesAfterEnv": [],
+  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
   "testMatch": [
     "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
     "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
   ],
   "testEnvironment": "jsdom",
+  "testEnvironmentOptions": {
+    "url": "http://localhost:3000"
+  },
   "testRunner": "./node_modules/jest-circus/runner.js",
   "transform": {
     "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
@@ -46,8 +49,5 @@
     "jest-watch-typeahead/filename",
     "jest-watch-typeahead/testname"
   ],
-  "resetMocks": true,
-  "coverageReporters": [
-    "text"
-  ]
+  "resetMocks": true
 }
