--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "@parcel/transformer-inline-string": "2.14.4",
     "@parcel/transformer-sass": "^2.14.4",
     "@parcel/transformer-webmanifest": "2.14.4",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "12.0.0",
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^12.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
+    "babel-jest": "^29.7.0",
     "babel-preset-react-app": "^10.0.0",
     "crypto-browserify": "^3.12.0",
     "eslint": "^7.11.0",
@@ -79,9 +79,10 @@
     "eslint-plugin-react-redux": "4.0.0",
     "events": "^3.1.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.3",
-    "jest-watch-typeahead": "0.6.1",
+    "jest": "29.7.0",
+    "jest-circus": "29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-watch-typeahead": "2.2.2",
     "path-browserify": "^1.0.0",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
@@ -92,11 +93,6 @@
     "svgo": "^3",
     "util": "^0.12.3",
     "vm-browserify": "^1.1.2"
-  },
-  "jest": {
-    "coverageReporters": [
-      "text"
-    ]
   },
   "browserslist": [
     ">0.2%",
