--- a/package.json
+++ b/package.json
@@ -51,6 +51,12 @@
     "test": "./bin/compile_search_parser.sh && jest --env=jsdom",
     "watch": "./bin/compile_search_parser.sh && jest --watch --env=jsdom",
     "coverage": "./bin/compile_search_parser.sh && jest --env=jsdom --coverage --watchAll=false",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report",
+    "test:all": "yarn test && yarn test:e2e",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
     "prettier": "./node_modules/.bin/prettier \"**/*.js\"",
@@ -65,6 +71,7 @@
     "@parcel/transformer-inline-string": "2.14.4",
     "@parcel/transformer-sass": "^2.14.4",
     "@parcel/transformer-webmanifest": "2.14.4",
+    "@playwright/test": "^1.57.0",
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^12.0.0",
     "babel-eslint": "^10.1.0",
