fix: `docker push` only for master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,6 +218,9 @@ workflows:
             - lint
             - test-unit
             - test-e2e
+          filters:
+            branches:
+              only: master
 
       # Phase 3: Deploy (requires build + docs)
       - deploy-prod:
