--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,37 @@ jobs:
       - store_artifacts:
           path: e2e/playwright-report
 
+  e2e-authenticated:
+    docker:
+      - image: cimg/node:20.17.0-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore Yarn Package Cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install Javascript Dependencies
+          command: yarn install --frozen-lockfile
+      - save_cache:
+          name: Save Yarn Package Cache
+          key: yarn-packages-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.cache/yarn
+      - run:
+          name: Install Playwright Browsers
+          command: npx playwright install --with-deps
+      - run:
+          name: Run Authenticated E2E Tests
+          command: yarn test:e2e:auth
+      - store_test_results:
+          path: e2e/test-results
+      - store_artifacts:
+          path: e2e/test-results
+      - store_artifacts:
+          path: e2e/playwright-report
+
   build-docs:
     docker:
       - image: cimg/node:20.17.0
@@ -152,11 +183,13 @@ workflows:
     jobs:
       - build
       - e2e
+      - e2e-authenticated
       - build-docs
       - deploy-prod:
           requires:
             - build
             - e2e
+            - e2e-authenticated
             - build-docs
           filters:
             branches:
