test: Cleanup CI (no more redundant tasks)

--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:report": "playwright show-report",
     "test:e2e:auth": "playwright test --project=chromium-authenticated",
-    "test:e2e:all": "yarn test && yarn test:e2e",
-    "test:e2e:full": "yarn test:e2e && yarn test:e2e:auth",
+    "test:all": "yarn test && yarn test:e2e",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
     "prettier": "./node_modules/.bin/prettier \"**/*.js\"",
