fix(ci): Increase e2e job memory to prevent OOM
The e2e tests were failing with exit code 137 (SIGKILL) because the
webServer process was being killed due to out of memory errors.

The CI container was running 6 browser projects (chromium, firefox,
webkit, Mobile Chrome, Mobile Safari, chromium-authenticated) with 58
tests plus the dev server in the default 4GB container.

This commit adds resource_class: large (8GB RAM) to the e2e job to
provide enough memory for all browsers to run successfully.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,7 @@ jobs:
   e2e:
     docker:
       - image: cimg/node:20.17.0-browsers
+    resource_class: large
     working_directory: ~/repo
     steps:
       - checkout
