--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,9 @@ jobs:
           name: Install Playwright Browsers
           command: npx playwright install --with-deps
       - run:
+          name: Build Production Bundle
+          command: yarn build
+      - run:
           name: Run E2E Tests
           command: yarn test:e2e
       - store_test_results:
