--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,15 @@
 {
+  "reporters": [
+    "default",
+    ["jest-junit", {
+      "outputDirectory": "test-results",
+      "outputName": "jest-results.xml",
+      "classNameTemplate": "{classname}",
+      "titleTemplate": "{title}",
+      "ancestorSeparator": " › ",
+      "usePathForSuiteName": true
+    }]
+  ],
   "roots": [
     "<rootDir>/src"
   ],
