--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "jest": "29.7.0",
     "jest-circus": "29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "2.2.2",
     "path-browserify": "^1.0.0",
     "prettier": "^2.0.5",
