--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-redux": "4.0.0",
     "events": "^3.1.0",
+    "fast-xml-parser": "^5.3.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
     "jest-circus": "29.7.0",
