--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
     "@fortawesome/fontawesome-free": "5.1.1",
     "@parcel/service-worker": "^2.14.4",
+    "bootstrap": "5.0.2",
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
