--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,9 +6,7 @@ cmds = ['yarn install --frozen-lockfile']
 
 [phases.build]
 cmds = [
-  'yarn build',
-  'chmod +x bin/transcient_env_vars.sh',
-  './bin/transcient_env_vars.sh switch build build-runtime'
+  'yarn build'
 ]
 
 [start]
