chore: switch from pegjs to peggy
PEG.js is end of life (last commit 7 years ago). Peggy is the
maintained fork with full backwards compatibility.

- Replace pegjs dependency with peggy
- Update compile script to use peggy CLI
- Update grammar file reference URLs
- Regenerate parser with peggy 5.0.6

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "immutable": "^3.8.2",
     "lodash": "^4.17.21",
     "parcel": "^2.14.4",
-    "pegjs": "^0.10.0",
+    "peggy": "^5.0.0",
     "react": "16.10.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-collapse": "^4.0.3",
